<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyBlue</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_gesture">手势设置\n在屏幕上输入两个笔画的手势\n手势将自动保存\n最多保存九个，超过九个会全部清空\n第一个手势为解除锁定手势</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="btn_home_gesture">进入手势</string>
    <string name="btn_home_contact">私密联系人</string>
    <string name="btn_home_img">私密照片/录音</string>
    <string name="btn_home_password">密码保险箱</string>
    <string name="btn_home_call_record">通话记录</string>
    <string name="btn_home_hardware">硬件( wifi/bluetooth/gps )</string>
    <string name="btn_home_sms">私密短信</string>
    <string name="btn_home_test">测试</string>
    <string name="btn_home_locate">基于位置加密</string>
    <string name="title_activity_gesture">GestureActivity</string>
    <string name="txt_gesture_newname">GestureActivity</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="txt_sms_hello">hello</string>
    <string name="txt_sms_send">开始交谈</string>
    <string name="txt_sms_description">当程序锁定时未读短信显示在这里\n解除锁定时未读短信恢复</string>
    <string name="default_description">image</string>
    <string name="title_activity_contact">Contact</string>
    <string name="txt_contact_add_contact">添加隐私联系人</string>
    <string name="title_activity_contact_add">ContactAddActivity</string>
    <string name="txt_contact_add_number_hint">在此输入要保护的电话号码</string>
    <string name="txt_contact_add_name_hint">为隐私联系人起个名字吧</string>
    <string name="chk_contact_add_hidden_mode_phone_hint">保护通话记录</string>
    <string name="chk_contact_add_hidden_mode_sms_hint">保护短信记录</string>
    <string name="spin_contact_add_hidden_mode_call_prompt">来电保护模式</string>
    <string name="btn_contact_add_save">保存</string>
    <string name="btn_contact_add_delete">删除</string>
    <string name="title_activity_call_record">CallRecordActivity</string>
    <string name="title_activity_hardware">HardwareActivity</string>
    <string name="title_activity_encrypt">EncryptActivity</string>
    <string name="txt_encrypt_add">新增密码串</string>
    <string name="txt_encrypt_hint">滑动以查看保存的密码</string>
    <string name="title_activity_encrypt_add">EncryptAddActivity</string>
    <string name="txt_encrypt_add_name">为您的密码起个名字</string>
    <string name="txt_encrypt_add_password">在此输入密码</string>
    <string name="txt_encrypt_add_comment">在此输入备注</string>
    <string name="txt_encrypt_add_btn">确定</string>
    <string name="txt_encrypt_add_del">删除</string>
    <string name="title_activity_wifi">WifiActivity</string>
    <string name="txt_wifi_alllist">可选wifi</string>
    <string name="txt_wifi_default_count">(0)</string>
    <string name="txt_wifi_blacklist">黑名单</string>
    <string name="btn_wifi_scan">重新扫描附近的Wifi</string>
    <string name="title_activity_locate">LocateActivity</string>
    <string name="txt_locate_tag">位置黑名单</string>
    <string name="txt_locate_current_location">当前地点</string>
    <string name="txt_locate_current_location_detail">正在加载中</string>
    <string name="btn_locate_add">标记当前位置</string>
    <string name="title_activity_location_detail">LocationDetailActivity</string>
    <string name="txt_location_hint_name">为该地点起个名字</string>
    <string name="txt_location_hint_latitude">纬度</string>
    <string name="txt_location_hint_longtitude">经度</string>
    <string name="txt_location_hint_description">描述</string>
    <string name="btn_location_detail_save">保存</string>
    <string name="btn_location_detail_delete">删除</string>
    <string name="title_activity_home_tab">HomeTabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_key_configure">KeyConfigureActivity</string>
    <string name="txt_bluetooth_whitelist">白名单</string>
    <string name="txt_bluetooth_whitelist_count">()</string>
    <string name="txt_bluetooth_alllist">附近的蓝牙设备</string>
    <string name="txt_bluetooth_alllist_count">()</string>
    <string name="btn_bluetooth_scan">重新扫描附近的蓝牙设备(约12秒)</string>
    <string name="txt_home_about">        忆江南\n
        江南好\n
        风景旧曾谙\n
        日出江花红胜火\n
        春来江水绿如蓝\n
        能不忆江南?</string>
    <string name="title_activity_home_flow">HomeFlowActivity</string>
    <string name="title_main">蓝牙锁</string>
    <string name="title_activity_home_slide">蓝牙锁</string>
    
    <string name="txt_secret_code_title">当前秘钥</string>
    <string name="txt_secret_code_prefix">*#*#</string>
    <string name="txt_secret_code">Secret Code Here</string>
    <string name="txt_secret_code_sufix">#*#*</string>
    <string name="btn_secret_code_update">更新</string>

</resources>