<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity"
    android:weightSum="15" >
    
    <Button
        android:id="@+id/button_test"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/btn_home_test"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_config"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/btn_home_config"
        android:layout_weight="1" />

   <Button
        android:id="@+id/button_gesture"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/btn_home_gesture"
        android:layout_weight="1" />
   
   <Button
        android:id="@+id/button_password"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/btn_home_password"
        android:layout_weight="1" />
   
   <Button
        android:id="@+id/button_contact"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/btn_home_contact"
        android:layout_weight="1" />
   
   <Button
        android:id="@+id/button_sms"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/btn_home_sms"
        android:layout_weight="1" />
   
   <android.gesture.GestureOverlayView
            android:id="@+id/view_password_gesture"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="9" />
   

</LinearLayout>