<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="7"
    tools:context=".ContactAddActivity" >

    <EditText
        android:id="@+id/txt_location_detail_name"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_location_hint_name"
        android:inputType="text"
        android:maxEms="20"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txt_location_detail_latitude"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_location_hint_latitude"
        android:inputType="numberDecimal"
        android:maxEms="20"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txt_location_detail_longtitude"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_location_hint_longtitude"
        android:inputType="numberDecimal"
        android:maxEms="20"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txt_location_detail_description"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/txt_location_hint_description"
        android:inputType="textMultiLine"
        android:maxEms="20"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_location_detail_save"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_location_detail_save" />

    <Button
        android:id="@+id/btn_location_detail_delete"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_location_detail_delete"
        android:textColor="#ff0000" />

</LinearLayout>