<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="7"
    tools:context=".EncryptAddActivity" >

    <EditText
        android:id="@+id/txt_encrypt_add_name"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_encrypt_add_name"
        android:inputType="text"
        android:maxEms="20"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txt_encrypt_add_password"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/txt_encrypt_add_password"
        android:inputType="textPassword"
        android:maxEms="20"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/txt_encrypt_add_comment"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:hint="@string/txt_encrypt_add_comment"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:singleLine="false" />
    
    <Button 
        android:id="@+id/btn_encrypt_add_del"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/txt_encrypt_add_del"
        android:textSize="15sp"
        android:textColor="#ff0000"/>

    <Button 
        android:id="@+id/btn_encrypt_add_done"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/txt_encrypt_add_btn"
        android:textSize="15sp"
        android:textColor="#0f00ff"/>
    
</LinearLayout>