<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="11"
    tools:context=".BluetoothActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/txt_bluetooth_whitelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_bluetooth_whitelist"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_bluetooth_whitelist_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txt_bluetooth_whitelist"
            android:gravity="center"
            android:text="@string/txt_wifi_default_count"
            android:textColor="#111111" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_bluetooth_whitelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/txt_bluetooth_alllist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_bluetooth_alllist"
            android:textColor="#00FFFF" />

        <TextView
            android:id="@+id/txt_bluetooth_alllist_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txt_bluetooth_alllist"
            android:gravity="center"
            android:text="@string/txt_bluetooth_alllist_count"
            android:textColor="#00FFFF" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_bluetooth_all"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >
    </ListView>

    <Button
        android:id="@+id/btn_bluetooth_scan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_bluetooth_scan" />

</LinearLayout>