<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context=".LocationActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_locate_tag"
        android:textColor="#00ff00"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/list_locate_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        >
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_locate_current_location"
        android:textColor="#ff00ff"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/txt_locate_current"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/txt_locate_current_location_detail"
        android:textColor="#333333"
        android:textSize="15sp" />

    <Button 
        android:id="@+id/btn_locate_add_current"
         android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/btn_locate_add"
        android:textColor="#330000"
        android:textSize="15sp"/>
</LinearLayout>